<resources>
    <string name="app_name">FitZone(Trainer)</string>

    <!-- Splash Screen -->
    <string name="Title">FIT ZONE</string>

    <!--Login-->
    <string name="Welcome_to_fitZone">Welcome to FitZone</string>
    <string name="Login">Login</string>
    <string name="Welcome_back">Welcome back,</string>
    <string name="Ready">Ready to crush your fitness goals today?</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="Forgot">Forgot Password ?</string>
    <string name="sing_in">Sing In</string>
    <string name="Don_t">Don\'t have an account?</string>
    <string name="Create_now">Create now</string>

    <!--Register-->
    <string name="create_account">Create Account</string>
    <string name="Welcome">Welcome,</string>
    <string name="Registration">Registration</string>
    <string name="Let">Let\'s get started on achieving your goals together !</string>
    <string name="Name">Name</string>
    <string name="Phone">Phone</string>
    <string name="Address">Address</string>
    <string name="Terms_conditions">Terms &amp; conditions</string>
    <string name="read_more">read more</string>
    <string name="sing_up">Sing Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="exercises_list">Exercises list</string>
    <string name="workout_plans">Workout plans</string>
    <string name="add_achievements">add Achievements</string>
    <string name="created">Created</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="created_date">Created Date</string>
    <string name="edit">Edit</string>
    <string name="see_all_details">See all details</string>
    <string name="equipment">Equipment</string>
    <string name="body_part">Body part</string>
    <string name="workout_plans_list">Workout plans list</string>
    <string name="add_exercise">add exercise</string>
    <string name="height">Height</string>
    <string name="bmi">BMI</string>
    <string name="weight">Weight</string>
    <string name="current">Current</string>
    <string name="heaviest">Heaviest</string>
    <string name="lightest">Lightest</string>


</resources>