<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".Registration">

    <RelativeLayout
        android:id="@+id/rl_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessLeaf">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:background="@color/dark_blue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_arrow_small_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:layout_toStartOf="@+id/back"
                android:layout_toEndOf="@+id/back"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/back"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_layout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="60dp"
            tools:ignore="NotSibling">

            <ImageView
                android:id="@+id/img_sing_in_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="120dp"
                android:layout_marginEnd="120dp"
                android:background="@drawable/ic_logo_round_edge"
                tools:ignore="ContentDescription,ObsoleteLayoutParam" />
            <TextView
                android:id="@+id/tv_sing_in_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_sing_in_logo"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginVertical="30dp"
                android:fontFamily="@font/opensans_extrabold"
                android:gravity="center"
                android:text="@string/Registration"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/login_register_bg">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                tools:ignore="UselessParent">

                <androidx.appcompat.widget.AppCompatCheckedTextView
                    android:id="@+id/welcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/Welcome"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/opensans_bold"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    tools:ignore="HardcodedText" />

                <androidx.appcompat.widget.AppCompatCheckedTextView
                    android:id="@+id/Ready"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Let"
                    android:layout_below="@+id/welcome"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/opensans_bold"
                    android:textSize="14sp"
                    android:textColor="@color/text"
                    tools:ignore="HardcodedText" />

                <LinearLayout
                    android:id="@+id/ll_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/Ready"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Name"
                        app:boxBackgroundColor="@color/edit_text_background"
                        app:boxStrokeColor="#4E4A4A"
                        app:boxStrokeWidth="3dp"
                        app:endIconMode="clear_text"
                        app:hintTextColor="@color/hint_color"
                        app:shapeAppearanceOverlay="@style/Button4"
                        tools:ignore="HardcodedText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/trainer_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textEmailAddress"
                            android:paddingStart="15dp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size"
                            android:textStyle="bold"
                            tools:ignore="RtlSymmetry,TextContrastCheck,TouchTargetSizeCheck" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/Email"
                        app:boxBackgroundColor="@color/edit_text_background"
                        app:boxStrokeColor="#4E4A4A"
                        app:boxStrokeWidth="3dp"
                        app:endIconMode="clear_text"
                        app:hintTextColor="@color/hint_color"
                        app:shapeAppearanceOverlay="@style/Button4"
                        tools:ignore="HardcodedText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/member_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:paddingStart="15dp"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size"
                            android:textStyle="bold"
                            tools:ignore="RtlSymmetry,TextContrastCheck,TouchTargetSizeCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/password"
                        app:boxBackgroundColor="@color/edit_text_background"
                        app:boxStrokeColor="@color/hint_color"
                        app:boxStrokeWidth="3dp"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="#4E4A4A"
                        app:shapeAppearanceOverlay="@style/Button4"
                        tools:ignore="HardcodedText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/member_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:paddingStart="15dp"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size"
                            android:textStyle="bold"
                            tools:ignore="RtlSymmetry,TextContrastCheck" />


                    </com.google.android.material.textfield.TextInputLayout>


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/btn_bg"
                        android:elevation="@dimen/button_elevation"
                        android:fontFamily="@font/nunito_medium"
                        android:gravity="center"
                        android:shadowColor="@color/black"
                        android:text="@string/sing_up"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/button_text_size"
                        android:textStyle="normal|bold"
                        app:cardElevation="@dimen/button_card_elevation"
                        tools:ignore="HardcodedText,TouchTargetSizeCheck" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_semi_bold"
                            android:text="Alrady have Account !"
                            android:textSize="16sp"
                            tools:ignore="HardcodedText" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/login_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="10dp"
                            android:fontFamily="@font/nunito_semi_bold"
                            android:text="Login now"
                            android:textColor="@color/dark_cyan"
                            android:textSize="16sp"
                            tools:ignore="HardcodedText,ObsoleteLayoutParam" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>